--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
     </header>
-    
+    <h1>Luna Ibarra - Alejandro Moreno</h1>
     <div class="slider">
         <input type="radio" name="radio-btn" id="radio1" checked>
         <input type="radio" name="radio-btn" id="radio2">
