--- a/index.html
+++ b/index.html
@@ -78,16 +78,15 @@
     <main>
         <section class="texto-imagen">
             <div class="texto">
-                <h2>Bienvenido a soluciones Tecnológicas</h2>
-                <p>Impulsamos tu negocio con soluciones tecnológicas personalizadas. Ofrecemos desarrollo de software, consultoría IT y 
-                    ciberseguridad a medida, diseñados para optimizar tus procesos, proteger tu información y llevar tu empresa al siguiente nivel.</p>
+                <h2>Frutas y Verduras</h2>
+                <p>h</p>
                 <br>
                 <h2>Ventajas</h2>
                 <ol>
-                    <li>Soluciones tecnológicas personalizadas.</li>
-                    <li>Mejorar procesos y seguridad a través de la tecnología.</li>
-                    <li>Optimización de procesos, protección de datos y mejora de la competitividad.</li>
-                    <li>"Soluciones a medida" que se adaptan a las necesidades específicas de cada cliente.</li>
+                    <li>Entregas a domicilio</li>
+                    <li>frescas</li>
+                    <li>Sanas</li>
+                    <li>Llenas de sabor.</li>
                 </ol>
             </div>
             <div class="image-container">
