--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alejandro Moreno</title>
+    <title>Alejandro Moreno - Luna Ibarra</title>
     <link rel="stylesheet" href="estilos.css"> 
 
 </head>
@@ -11,8 +11,8 @@
 <body> 
     <header>
         <div class="logo-titulo">
-            <img id="icono1" src="Imagenes/logo1.jpeg" alt="Soluciones">
-            <h1 id="superior">InnovaTec</h1>
+            <img id="icono1" src="Imagenes/Logo-removebg-preview.png" alt="Bienestar">
+            <h1 id="superior">Azul Mental</h1>
         </div>
         <nav class="navbar">  
             <ul class="menu">                                                     
@@ -38,26 +38,26 @@
 
         <div class="slides">
             <div class="slide first"> 
-                <img src="./Imagenes/banner.png" alt="Noticia 1">
+                <img src="Imagenes/banner1.png" alt="Noticia 1">
                 <div class="caption">
-                    <h2>Soluciones Tecnológicas</h2>
-                    <p1>Transformando ideas en realidades tecnológicas</p>
+                    <h2>Bienestar a tu alcance</h2>
+                    <p1>Transformamos tu bienestar mental en una prioridad</p>
                 </div>
             </div>
 
             
             <div class="slide">
-                <img src="./Imagenes/not2.png" alt="Noticia 2">
+                <img src="Imagenes/banner2.png" alt="Noticia 2">
                 <div class="caption">
-                    <h2>Promoción especial</h2>
-                    <p>¡Mejora tu sistema! </p>
+                    <h2>Programas Especiales</h2>
+                    <p>¡Mejora tu salud mental y emocional! </p>
                 </div>
             </div>
             <div class="slide">
-                <img src="./Imagenes/not3.png" alt="Noticia 3">
+                <img src="Imagenes/banner3.png" alt="Noticia 3">
                 <div class="caption">
-                    <h2>Desarrollos a tu medida</h2>
-                    <p>¡Contáctanos hoy!</p>
+                    <h2>Apoyo personalizado</h2>
+                    <p>¡Contáctanos hoy y mejora tu calidad de vida!</p>
                 </div>
             </div>
         </div>
@@ -78,26 +78,26 @@
     <main>
         <section class="texto-imagen">
             <div class="texto">
-                <h2>Frutas y Verduras</h2>
-                <p>h</p>
+                <h2>Salud Mental y Bienestar</h2>
+                <p>trabajamos para ofrecerte herramientas que te ayuden a lograr un equilibrio emocional saludable y duradero.</p>
                 <br>
-                <h2>Ventajas</h2>
+                <h2>Nuestros Beneficios</h2>
                 <ol>
-                    <li>Entregas a domicilio</li>
-                    <li>frescas</li>
-                    <li>Sanas</li>
-                    <li>Llenas de sabor.</li>
+                    <li>Atención en línea y presencial</li>
+                    <li>Profesionales altamente calificados</li>
+                    <li>Planes personalizados de bienestar</li>
+                    <li>Apoyo integral para el bienestar emocional</li>
                 </ol>
             </div>
             <div class="image-container">
-                <img src="Imagenes/varios logos.png" alt="Soluciones">
+                <img src="Imagenes/img1.png" alt="Soluciones">
             </div>
             <br><br>
         </section>
     </main>
     
     <footer>
-        <p>Alejandro Moreno. Todos los derechos reservados.</p>
+        <p>Alejandro Moreno & Luna Ibarra. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
